tests/snapshots/examples_fixtures/namespaces__namespace_missing_import_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/namespaces/namespace_missing_import_error.flx
== compile ==
failed (compile)
== diagnostics ==
--> compiler error[E013]: MODULE NOT IMPORTED

Module `Modules.Data.MyFile` is not imported.

  --> examples/namespaces/namespace_missing_import_error.flx:1:7
  |
1 | print(Modules.Data.MyFile.value());
  |       ^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Add an import statement at the top of your file: `import Modules.Data.MyFile`. You can also use an alias: `import {} as ShorterName`. Remember: imports must be at the top, before any other code.
== stdout ==
<not executed>
